2001-08-01  Robert Graham Merkel  <rgmerk@mira.net>

	* src/engine/SchedXaction.{ch}: modified indenting to 2 spaces.

	* src/engine/SchedXaction.{ch}: Added member for recording if
	SX has changed since last save. 
	(xaccSchedXactionSetDirtyness) provide API for modifying that field.
	All setter functions changed to set member appropriately.
	(xaccSchedXactionSetSlot, XaccSchedXactionGetSlot): New functions

	* src/engine/gnc-book-p.h (struct gnc_book_struct): Added field
	for recording whether sx list had changed.

	* src/engine/gnc-book.c: (gnc_book_marked_save): mark the SX-related
	stuff as saved.
	(gnc_book_not_saved): look up the SX-related stuff as well.

	* src/engine/gnc-schedxaction-v2.c: once a scheduled transaction is
	loaded by the backend, mark it as not saved.

2001-07-30  Christian Stimming  <stimming@tuhh.de>

	* src/scm/html-utilities.scm: Fixed bug with sub-balances in
	account tables with non-default account selection.

2001-07-30  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/glade/sched-xact.glade: Added seperate reminders
	dialog from since-last-run dialog.  Removed reminders
	frame/section from since-last-run dialog.  Added alternative SX
	Editor UI [not presently used].

	* src/gnome/dialog-sxsincelast.c: Changes for
	reminders-as-seperate-dialog; selected reminders then update
	since-last-run dialog [whether it's open or not]; the dialogs
	[mostly] deal with their closing conditions correctly.  Support
	for ad-hoc variables in template-transaction-split formulas.

	* src/engine/gnc-schedxaction-xml-v2.c
	(gnc_schedXaction_end_handler): Added support for restoring
	in-development pre-template-account-stored-in-SX change.
	(tt_act_handler): Added support for restoring in-devel pre-CIT
	.gml2/XMLv2 files.

	* src/gnc-exp-parser.c (gnc_exp_parser_parse_seperate_vars): Added
	for Scheduled-Transaction-related since-last-run/split-formula
	parsing.

	* src/gnome/dialog-sxsincelast.c: Added support for variable entry